Change log for Linux::Fanotify

20140717	[ 1.0 ]
	- Initial release